Added encryption Removed comments Fixed issue with Lob field in PostgreSQL